--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@daily-co/daily-js": "^0.74.0",
+    "@daily-co/daily-react": "^0.22.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.6.7",
+    "axios": "^1.7.9",
     "compression": "^1.7.5",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
