--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "compression": "^1.7.5",
     "firebase": "^10.8.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
